Rename all instances of addressbook, addressBook and AddressBook to the respective BookFace names